--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://pbs.twimg.com/profile_images/887739347079897088/6WtH2zXf_400x400.jpg" class="img-medium"/>
+            <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am abhijeet and this is my first webapp.
         </div>
-        <script type="text/javascript" src="https://pbs.twimg.com/profile_images/887739347079897088/6WtH2zXf_400x400.jpg">
+        <script type="/ui/main.js">
         </script>
     </body>
 </html>
